--- a/style.css
+++ b/style.css
@@ -6,3 +6,12 @@
 .container {
     background-color: rgb(11, 14, 14);
 }
+
+.grid {
+    display: grid;
+    height: 80vh;
+    width: 80%;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 100px 200px 150px;
+    border: 2px solid red;
+}
