--- a/style.css
+++ b/style.css
@@ -9,9 +9,19 @@
 
 .grid {
     display: grid;
-    height: 80vh;
+    height: 50vh;
     width: 80%;
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 100px 200px 150px;
     border: 2px solid red;
+}
+
+.flex {
+    display: flex;
+    height: 50vh;
+    width: 80%;
+    flex-flow: column wrap;
+    justify-content: space-around;
+    align-content: center;
+    border: 2px solid blue;
 }
