--- a/style.css
+++ b/style.css
@@ -16,6 +16,17 @@
     border: 2px solid red;
 }
 
+.cell1,
+.cell2,
+.cell3,
+.cell4,
+.cell5,
+.cell6 {
+    border: 1px solid green;
+}
+
+
+
 .flex {
     display: flex;
     height: 50vh;
